# Team-Glass-IMDB

./: .gitignore  README.md  manage.py  pyproject.toml
Imdb_app/: admin.py  api_search_call.py  apps.py  forms.py  helpers.py  models.py  views.py
Imdb_app/migrations/: 0001_initial.py  0002_auto_20210419_1750.py  0003_comment_model_user_image.py  0004_auto_20210420_1515.py  0005_auto_20210420_1516.py
Imdb_app/static/: homepage.css  login.css  search_details.css  signup.css
Imdb_app/templatetags/: split.py
Imdb_project/: asgi.py  settings.py  urls.py  wsgi.py
templates/: 404.html  500.html  actorspage.html  base_header.html  base_header2.html  details_page.html  homepage.html  login.html  search_details.html  signup.html  update_user.html  userprofile.html
