[tool.poetry]
name = "team-glass-imdb"
version = "0.1.0"
description = ""
authors = ["Jordan Kubista <jkube29@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.1.7"
django-mysql = "^3.11.1"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.6"
flake8 = "^3.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
